# odfio

./: README.md  pyproject.toml
src/odio/v1_2/: __init__.py
test/: test_readme.py
